--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "7": "^0.0.1",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
